--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ li.features-item {
   padding-right: 8px;
   padding-left: 8px;
   padding-top: 84px;
-  padding-bottom: 134px;
+  padding-bottom: 21px;
   margin-bottom: 10px;
   display: flex;
   flex-direction: column;
@@ -489,7 +489,7 @@ li.features-item {
   background-size: 75px 72px;
   background-repeat: no-repeat;
   background-position: 112px 4px;
-  height: 70px;
+  min-height: 70px;
 }
 
 .icon-food {
@@ -498,7 +498,7 @@ li.features-item {
   background-size: 74px 70px;
   background-repeat: no-repeat;
   background-position: 108px 5px;
-  height: 70px;
+  min-height: 70px;
 }
 
 .icon-souvenir {
@@ -507,7 +507,7 @@ li.features-item {
   background-size: 64px 76px;
   background-repeat: no-repeat;
   background-position: 50% 0;
-  height: 70px;
+  min-height: 70px;
 }
 
 .features-row3 {
@@ -533,11 +533,12 @@ li.features-item {
 
 .features-item p {
   margin-top: 0;
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .features-item-dop {
-  padding-top: 8px;
+  padding-top: 18px;
+  padding-bottom: 8px;
 }
 
 .features-header-title,
@@ -624,7 +625,6 @@ li.features-item {
   text-transform: uppercase;
   width: 568px;
   padding: 30px 0;
-  padding-bottom: 32px;
 
   background-color: #766357;
   border: 0;
@@ -663,15 +663,7 @@ li.features-item {
   left: 316px;
   -webkit-box-shadow: 0 6px 17px rgba(0, 1, 1, 0.2);
           box-shadow: 0 6px 17px rgba(0, 1, 1, 0.2);
-
-}
-
-.popup-form-hidden {
-    display: none;
-}
-
-.popup-form-active {
-  display: block;
+    
   animation-duration: 0.75s;
   animation-timing-function: ease;
   animation-delay: 0s;
@@ -680,6 +672,10 @@ li.features-item {
   animation-iteration-count: 1;
   animation-play-state: running;
   animation-name: bounce;
+}
+
+.popup-form-hidden {
+    display: none;
 }
 
 @keyframes bounce {
@@ -858,14 +854,14 @@ li.features-item {
 }
 
 .popup-form-plus {
- position:relative;
- width: 38px;
- height: 38px;
- border: 0;
- padding: 0;
- text-indent: -1000px;
- overflow: hidden;
- background-color: #f2f2f2;
+  position:relative;
+  width: 38px;
+  height: 38px;
+  border: 0;
+  padding: 0;
+  text-indent: -1000px;
+  overflow: hidden;
+  background-color: #f2f2f2;
 }
 
 .popup-form-plus:hover::after,
